@@ -1,6 +1,8 @@
 ver 0.18.9 (not yet released)
 * protocol
   - "findadd" requires the "add" permission
+* output
+  - alsa: improved workaround for noise after manual song change
 * decoder
   - vorbis: fix linker failure when libvorbis/libogg are static
 * encoder
